# AdInMo

./: .dockerignore  Cargo.toml  License.md  README.md  env.example  justfile
actix_server/: Cargo.toml  Dockerfile
actix_server/src/: main.rs
client/: Cargo.toml  Dockerfile
client/src/: main.rs
database/: Cargo.toml  Dockerfile
database/src/: auth.rs  crud.rs  error.rs  lib.rs
hyper_service/: Cargo.toml  Dockerfile
hyper_service/src/: main.rs
mariadb/: Dockerfile  init-db.sql
mariadb_database/: Cargo.toml  Dockerfile  create_table.sql
mariadb_database/src/: lib.rs
server/: Cargo.toml  Dockerfile
server/src/: auth.rs  crud.rs  main.rs
service/: Cargo.toml  Dockerfile
service/src/: main.rs
