[package]
name = "mariadb_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
