[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
database = { path = "../database" }
env_logger = "0.10"
log = "0.4"
